# obscura

./: AGENTS.md  Cargo.toml  README.md  octo.md
crates/obscura-cdp/src/domains/: input.rs
crates/obscura-cli/: Cargo.toml  build.rs
crates/obscura-cli/src/: main.rs
crates/obscura-cli/wix/: main.wxs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: runtime.rs
crates/obscura-mcp/: Cargo.toml
crates/obscura-mcp/src/: lib.rs
crates/obscura-net/src/: cookies.rs  lib.rs  proxy_list.rs
crates/obscura-octo/: Cargo.toml
crates/obscura-octo/src/: config.rs  engine.rs  fetcher.rs  lib.rs  monitor.rs  monitor_server.rs  output.rs  schema.rs  search.rs  security.rs  server.rs  warmup.rs
crates/obscura-octo/tests/: http_ws.rs  monitor_core.rs  search_core.rs
crates/obscura-octo/tests/common/: mod.rs
docs/: Browser-fingerprinting-research.md  HTTP-header-fingerprint-reference.md  Runtime-fingerprint-surface.md  headless-chrome-fingerprinting.md
scripts/: build-stealth.bat
stealth/: stealth.md
