[package]
name = "obscura-octo"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
stealth = ["obscura-browser/stealth", "obscura-net/stealth"]

[dependencies]
obscura-browser = { workspace = true }
obscura-dom = { workspace = true }
obscura-net = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures-util = "0.3"
base64 = { workspace = true }

[dev-dependencies]
obscura-dom = { workspace = true }
base64 = { workspace = true }
